# NeuralNetworks

./: .gitignore  CMakeLists.txt  ConvolutionalNeuralNetworks.pptx  README.md
src/: DataSet.cpp  DataSet.h  Perceptron.cpp  Perceptron.h  RMSETeacher.cpp  RMSETeacher.h  SoftMaxTeacher.cpp  SoftMaxTeacher.h  Teacher.cpp  Teacher.h  testMain.cpp
src/apps/: mainLaptop.cpp  mainMushroom.cpp  test.cpp
src/components/: ActivationFunctions.cpp  ActivationFunctions.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  DenseLayer.cpp  DenseLayer.h  Dimension.h  DimensionalSizes.h  FunctionLayer.h  Layer.h  MatrixTypes.h  PullingLayer.cpp  PullingLayer.h  Tensor.h
task1/: Laptop_price.csv  README.md  task1_custom.ipynb  task1_lib.ipynb
task2/: CMakeLists.txt  Laptop_price.csv  README.md  agaricus-lepiota_h.data  task2.ipynb
task3/: README.MD  task3.ipynb
task4/: README.md  task4.ipynb
